2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.

2011-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: Do not crash if an unknown device-property
	  is set.

2011-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve balancing if some dle have strategy
	  noinc or a smaller dumpcycle.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: new changer error: empty.
	* perl/Amanda/Changer/robot.pm: return empty slot.
	* perl/Amanda/Taper/Scan/traditional.pm: Handle empty slot.

2011-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: Parse negative kb and orig-kb.
	* perl/Amanda/Logfile.swg: Do not write negative orig-kb.

2011-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix Computation of data_lost on current and
	  next tape.

2011-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* amplot/amplot.awk: Fix for new log format, fix small -t display,
	  fix 'set key' syntax.
	* amplot/amplot.g: Fix 'set data' and 'plot' syntax.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Fix installcheck for 'splitting not enabled'.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/vfs-device.c: LEOM property default to TRUE.

2011-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log 'splitting not enabled' on write
	  failure.

2011-03-27  Dustin J. Mitchell <dustin@mozilla.com>
	* perl/Amanda/Util.swg: revert previous patch
	* gnulib/Makefile.am gnulib/fsusage.h
	  gnulib/regenerate/fsusage-no-bool.patch gnulib/regenerate/regenerate:
	  patch fsusage.h to not use stdbool
	* device-src/vfs-device.c: don't use 'false' and 'true' (from stdbool)

2011-03-26  Dustin J. Mitchell <dustin@mozilla.com>