@@ -1,3 +1,7 @@
+2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Do not count dup to tape when checking space
+	  on holdingdisk.
+
 2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
 	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.
